--- a/Crime Analytics.ipynb
+++ b/Crime Analytics.ipynb
@@ -57,6 +57,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Crimes happen at mealtime and other fun findings\n",
+    "================================================\n",
+    "\n",
+    "Just kidding, the meal time thing is the only interesting fact I found\n",
+    "---------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this assignment, we analyze criminal incident data from Seattle and San Francisco. The goal is to find and highlight patterns.\n",
     "\n",
     "We will focus on offense type and time of occurrence (which month, what time)."
